feat: 测试MQTT订阅与发布

--- a/mqtt-demo/src/main/resources/application.yml
+++ b/mqtt-demo/src/main/resources/application.yml
@@ -10,9 +10,12 @@ mqtt:
   password: guest
   receiver:
     defaultTopic: receive_iot_topic/#,receive_chat_topic/#
-    clientId: ${random.value}
+    clientId: mqttreceiver
   sender:
     defaultTopic: test_send
     clientId: mqttProducer
 
+logging:
+  level:
+    org.eclipse.paho: debug
 
